RESOLVED FIXED149145
WKWebView scroll deceleration rate is not being set properly
https://bugs.webkit.org/show_bug.cgi?id=149145
Summary WKWebView scroll deceleration rate is not being set properly
Wenson Hsieh
Reported 2015-09-14 17:48:58 PDT
Using scrollView.decelerationRate = value; will snap the value to predefined UIKit constants, which is undesirable for our purposes.
Attachments
Patch (2.49 KB, patch)
2015-09-14 17:56 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2015-09-14 17:49:40 PDT
Wenson Hsieh
Comment 2 2015-09-14 17:56:38 PDT
WebKit Commit Bot
Comment 3 2015-09-14 19:42:53 PDT
Comment on attachment 261156 [details] Patch Clearing flags on attachment: 261156 Committed r189773: <http://trac.webkit.org/changeset/189773>
WebKit Commit Bot
Comment 4 2015-09-14 19:42:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.